# Ascii-Me

./: .pre-commit-config.yaml  MakeFile  README.md  ascii-me.py  codecov.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setupAntiguo.py
.github/workflows/: ci.yml  dependabot.yml  publish.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md
Ascii_art/: __main__.py  core.py
Examples/: advanced_features.py  basic_usage.py  integrations.py
ascii_art/: __init__.py  __main__.py  core.py
docs/: deployment.md  user_guide.md
scripts/: development.sh  release.sh  setup_dev.sh
src/ascii-me/: __init__.py  ascii_converter.py  cli.py  gif_handler.py  image_processor.py  utils.py
src/ascii_me/: __init__.py  ascii_converter.py  cli.py  gif_handler.py  image_processor.py
tests/: test_ascii_converter.py  test_gif_handler.py  test_image_processor.py  test_utils.py
